--- a/index.html
+++ b/index.html
@@ -71,44 +71,44 @@
 
     <div id="video" class="content">
         <div class="navParent" type="desktop">
-            <div class="nav-item first active" subsectionID="0video">Display</div>
-            <div class="nav-item" subsectionID="1video" id="dbg">Graphics</div>
-            <div class="nav-item" subsectionID="2video">Graphics Quality</div>
+            <div class="nav-item first active" subsection-id="0video">Display</div>
+            <div class="nav-item" subsection-id="1video" id="dbg">Graphics</div>
+            <div class="nav-item last" subsection-id="2video">Graphics Quality</div>
         </div>
         <div class="contentParent">
             <span class="header first" id="0a">Display</span>
-            <div class="option">
+            <div class="option" id="a0">
                 <span class="title">Window Mode</span>
                 <div class="option-picker">
                     <span class="option-title">Fullscreen</span>
                 </div>
             </div>
-            <div class="option">
+            <div class="option" id="a1">
                 <span class="title">Resolution</span>
                 <div class="option-picker">
                     <span class="option-title font-override" >1920x1080</span>
                 </div>
             </div>
-            <div class="option">
+            <div class="option" id="a2">
                 <span class="title">VSync</span>
                 <div class="option-picker">
                     <span class="option-title">Off</span>
                 </div>
             </div>
-            <div class="option">
+            <div class="option" id="a3">
                 <span class="title">Frame Rate Limit</span>
                 <div class="option-picker">
                     <span class="option-title font-override">240</span>
                 </div>
             </div>
-            <div class="option">
+            <div class="option" id="a4">
                 <span class="title">Rendering Mode</span>
                 <div class="option-picker">
                     <span class="option-title">Performance</span>
                 </div>
             </div>
             <span class="header" id="1a">Graphics</span> 
-            <div class="option">
+            <div class="option" id="a5">
                 <span class="title">Brightness</span>
                 <div class="option-slider" style="
                         background-image: linear-gradient(to right,
@@ -121,7 +121,7 @@
                     <span class="option-title font-override">100%</span>
                 </div>
             </div>
-            <div class="option">
+            <div class="option" id="a6">
                 <span class="title">User Interface Contrast</span>
                 <div class="option-slider" style="
                         background-image: linear-gradient(to right,
@@ -134,32 +134,32 @@
                     <span class="option-title font-override">1x</span>
                 </div>
             </div>
-            <div class="option">
+            <div class="option" id="a7">
                 <span class="title">Color Blind Mode</span>
                 <div class="option-picker">
                     <span class="option-title">Protanopia</span>
                 </div>
             </div>
-            <div class="option">
+            <div class="option" id="a8">
                 <span class="title">Color Blind Strength</span>
                 <div class="option-picker">
                     <span class="option-title font-override">5</span>
                 </div>
             </div>
             <span class="header" id="2a">Graphics Quality</span>
-            <div class="option">
+            <div class="option" id="a9">
                 <span class="title">Anti-Aliasing</span>
                 <div class="option-picker">
                     <span class="option-title">Off</span>
                 </div>
             </div>
-            <div class="option option-disabled">
+            <div class="option option-disabled" id="a10">
                 <span class="title">Temporal Super Resolution</span>
                 <div class="option-picker">
                     <span class="option-title">Off</span>
                 </div>
             </div>
-            <div class="option">
+            <div class="option" id="a11">
                 <span class="title"><span class="font-override-lite">3</span>D Resolution</span>
                 <div class="option-slider" style="
                         background-image: linear-gradient(to right,
@@ -172,249 +172,103 @@
                     <span class="option-title font-override">90%</span>
                 </div>
             </div>
-            <div class="option option-disabled">
+            <div class="option option-disabled" id="a12">
                 <span class="title">Dynamic <span class="font-override-lite">3</span>D Resolution</span>
                 <div class="option-picker">
                     <span class="option-title">Off</span>
                 </div>
             </div>
-            <div class="option option-disabled">
+            <div class="option option-disabled" id="a13">
                 <span class="title">Nanite Virtualized Geometry</span>
                 <div class="option-picker">
                     <span class="option-title">Off</span>
                 </div>
             </div>
-            <div class="option">
+            <div class="option" id="a14">
                 <span class="title">Shadows</span>
                 <div class="option-picker">
                     <span class="option-title">Off</span>
                 </div>
             </div>
-            <div class="option option-disabled">
+            <div class="option option-disabled" id="a15">
                 <span class="title">Global Illumination</span>
                 <div class="option-picker">
                     <span class="option-title">Off</span>
                 </div>
             </div>
-            <div class="option option-disabled">
+            <div class="option option-disabled" id="a16">
                 <span class="title">Reflections</span>
                 <div class="option-picker">
                     <span class="option-title">Off</span>
                 </div>
             </div>
-            <div class="option">
+            <div class="option" id="a17">
                 <span class="title">View Distance</span>
                 <div class="option-picker">
                     <span class="option-title">Low</span>
                 </div>
             </div>
-            <div class="option">
+            <div class="option" id="a18">
                 <span class="title">Textures</span>
                 <div class="option-picker">
                     <span class="option-title">Low</span>
                 </div>
             </div>
-            <div class="option">
+            <div class="option" id="a19">
                 <span class="title">Effects</span>
                 <div class="option-picker">
                     <span class="option-title">Low</span>
                 </div>
             </div>
-            <div class="option">
+            <div class="option" id="a20">
                 <span class="title">Post Processing</span>
                 <div class="option-picker">
                     <span class="option-title">Low</span>
                 </div>
             </div>
-            <div class="option">
+            <div class="option" id="a21">
                 <span class="title">Ray Tracing</span>
                 <div class="option-picker">
                     <span class="option-title">Off</span>
                 </div>
             </div>
         </div>
-        <div class="descriptionParent" class="" type="desktop">
-            <span class="title">Placeholder</span>
-            <span class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</span>
-            <span class="description warning">Lorem epsum</span>
+        <div class="descriptionParent" id="a0" type="desktop">
+            <span class="title">Window Mode</span>
+            <span class="description">How the game is displayed on your screen. <b>Windowed</b>: Runs the game in a window that you can resize. <b>Windowed Fullscreen</b>: Runs the game in fullscreen but allows minimzation and easy alt-tabbing. <b>Fullscreen</b>: Runs the game in fullscreen with the best input delay.</span>
+            <span class="description warning" hidden>Lorem epsum</span>
             <div class="options">
-                <span class="option first active">Placeholder</span>
-                <span class="option">Placeholder</span>
+                <span class="option first">Windowed</span>
+                <span class="option">Windowed Fullscreen</span>
+                <span class="option active">Fullscreen</span>
             </div>
         </div>
-    </div>
-    
-    <div id="sound" class="content inactive-object">
-        <div class="navParent" type="desktop">
-            <div class="nav-item first active" subsectionID="0video">Display</div>
-            <div class="nav-item" subsectionID="1video" id="dbg">Graphics</div>
-            <div class="nav-item" subsectionID="2video">Graphics Quality</div>
-        </div>
-        <div class="contentParent">
-            <span class="header first" id="0a">Sound</span>
-            <div class="option">
-                <span class="title">Window Mode</span>
-                <div class="option-picker">
-                    <span class="option-title">Fullscreen</span>
-                </div>
-            </div>
-            <div class="option">
-                <span class="title">Resolution</span>
-                <div class="option-picker">
-                    <span class="option-title font-override" >1920x1080</span>
-                </div>
-            </div>
-            <div class="option">
-                <span class="title">VSync</span>
-                <div class="option-picker">
-                    <span class="option-title">Off</span>
-                </div>
-            </div>
-            <div class="option">
-                <span class="title">Frame Rate Limit</span>
-                <div class="option-picker">
-                    <span class="option-title font-override">240</span>
-                </div>
-            </div>
-            <div class="option">
-                <span class="title">Rendering Mode</span>
-                <div class="option-picker">
-                    <span class="option-title">Performance</span>
-                </div>
-            </div>
-            <span class="header" id="1a">Graphics</span> 
-            <div class="option">
-                <span class="title">Brightness</span>
-                <div class="option-slider" style="
-                        background-image: linear-gradient(to right,
-                            rgb(0,20,120,0.8) 0%,
-                            rgb(0,20,120,0.8) 50%,
-                            rgb(0,0,40,0.8) 50%,
-                            rgb(0,0,40,0.8) 100%
-                        );
-                ">
-                    <span class="option-title font-override">100%</span>
-                </div>
-            </div>
-            <div class="option">
-                <span class="title">User Interface Contrast</span>
-                <div class="option-slider" style="
-                        background-image: linear-gradient(to right,
-                            rgb(0,20,120,0.8) 0%,
-                            rgb(0,20,120,0.8) 50%,
-                            rgb(0,0,40,0.8) 50%,
-                            rgb(0,0,40,0.8) 100%
-                        );
-                ">
-                    <span class="option-title font-override">1x</span>
-                </div>
-            </div>
-            <div class="option">
-                <span class="title">Color Blind Mode</span>
-                <div class="option-picker">
-                    <span class="option-title">Protanopia</span>
-                </div>
-            </div>
-            <div class="option">
-                <span class="title">Color Blind Strength</span>
-                <div class="option-picker">
-                    <span class="option-title font-override">5</span>
-                </div>
-            </div>
-            <span class="header" id="2a">Graphics Quality</span>
-            <div class="option">
-                <span class="title">Anti-Aliasing</span>
-                <div class="option-picker">
-                    <span class="option-title">Off</span>
-                </div>
-            </div>
-            <div class="option option-disabled">
-                <span class="title">Temporal Super Resolution</span>
-                <div class="option-picker">
-                    <span class="option-title">Off</span>
-                </div>
-            </div>
-            <div class="option">
-                <span class="title"><span class="font-override-lite">3</span>D Resolution</span>
-                <div class="option-slider" style="
-                        background-image: linear-gradient(to right,
-                            rgb(0,20,120,0.8) 0%,
-                            rgb(0,20,120,0.8) 90%,
-                            rgb(0,0,40,0.8) 90%,
-                            rgb(0,0,40,0.8) 100%
-                        );
-                ">
-                    <span class="option-title font-override">90%</span>
-                </div>
-            </div>
-            <div class="option option-disabled">
-                <span class="title">Dynamic <span class="font-override-lite">3</span>D Resolution</span>
-                <div class="option-picker">
-                    <span class="option-title">Off</span>
-                </div>
-            </div>
-            <div class="option option-disabled">
-                <span class="title">Nanite Virtualized Geometry</span>
-                <div class="option-picker">
-                    <span class="option-title">Off</span>
-                </div>
-            </div>
-            <div class="option">
-                <span class="title">Shadows</span>
-                <div class="option-picker">
-                    <span class="option-title">Off</span>
-                </div>
-            </div>
-            <div class="option option-disabled">
-                <span class="title">Global Illumination</span>
-                <div class="option-picker">
-                    <span class="option-title">Off</span>
-                </div>
-            </div>
-            <div class="option option-disabled">
-                <span class="title">Reflections</span>
-                <div class="option-picker">
-                    <span class="option-title">Off</span>
-                </div>
-            </div>
-            <div class="option">
-                <span class="title">View Distance</span>
-                <div class="option-picker">
-                    <span class="option-title">Low</span>
-                </div>
-            </div>
-            <div class="option">
-                <span class="title">Textures</span>
-                <div class="option-picker">
-                    <span class="option-title">Low</span>
-                </div>
-            </div>
-            <div class="option">
-                <span class="title">Effects</span>
-                <div class="option-picker">
-                    <span class="option-title">Low</span>
-                </div>
-            </div>
-            <div class="option">
-                <span class="title">Post Processing</span>
-                <div class="option-picker">
-                    <span class="option-title">Low</span>
-                </div>
-            </div>
-            <div class="option">
-                <span class="title">Ray Tracing</span>
-                <div class="option-picker">
-                    <span class="option-title">Off</span>
-                </div>
-            </div>
-        </div>
-        <div class="descriptionParent" class="" type="desktop">
-            <span class="title">Placeholder</span>
-            <span class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</span>
-            <span class="description warning">Lorem epsum</span>
+        <div class="descriptionParent inactive-object" id="a1" type="desktop">
+            <span class="title">Resolution</span>
+            <span class="description">The render resolution of your game, lower values will perform better, but may appear blurry.</span>
+            <span class="description warning" hidden>Lorem epsum</span>
             <div class="options">
-                <span class="option first active">Placeholder</span>
-                <span class="option">Placeholder</span>
+                <span class="option first font-override">1280x720</span>
+                <span class="option font-override">1600x900</span>
+                <span class="option font-override active">1920x1080</span>
+            </div>
+        </div>
+        <div class="descriptionParent inactive-object" id="a2" type="desktop">
+            <span class="title">VSync</span>
+            <span class="description">Prevents screen tearing by syncing your FPS with your monitor's refresh rate. May result in higher input delay.</span>
+            <span class="description warning" hidden>Lorem epsum</span>
+            <div class="options">
+                <span class="option first active">Off</span>
+                <span class="option">On</span>
+            </div>
+        </div>
+        <div class="descriptionParent inactive-object" id="a3" type="desktop">
+            <span class="title">Frame Rate Limit</span>
+            <span class="description">Prevents screen tearing by syncing your FPS with your monitor's refresh rate. May result in higher input delay.</span>
+            <span class="description warning" hidden>Lorem epsum</span>
+            <div class="options">
+                <span class="option first active">Off</span>
+                <span class="option">On</span>
             </div>
         </div>
     </div>
