--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="/scripts/global.js"></script>
     <script src="/scripts/pageNav.js" defer></script>
     <!-- Third Party Libraries -->
-    <!--script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
 </head>
 <body>
     <div class="floating-triangles"></div>
@@ -86,11 +86,11 @@
             <div class="option" id="a1">
                 <span class="title">Resolution</span>
                 <div class="option-picker">
-                    <span class="option-title font-override" >1920x1080</span>
+                    <span class="option-title font-override-black" >1920x1080</span>
                 </div>
             </div>
             <div class="option" id="a2">
-                <span class="title">VSync</span>
+                <span class="title">Vsync</span>
                 <div class="option-picker">
                     <span class="option-title">Off</span>
                 </div>
@@ -98,7 +98,7 @@
             <div class="option" id="a3">
                 <span class="title">Frame Rate Limit</span>
                 <div class="option-picker">
-                    <span class="option-title font-override">240</span>
+                    <span class="option-title font-override-black">240</span>
                 </div>
             </div>
             <div class="option" id="a4">
@@ -118,7 +118,7 @@
                             rgb(0,0,40,0.8) 100%
                         );
                 ">
-                    <span class="option-title font-override">100%</span>
+                    <span class="option-title font-override-black">100%</span>
                 </div>
             </div>
             <div class="option" id="a6">
@@ -126,12 +126,12 @@
                 <div class="option-slider" style="
                         background-image: linear-gradient(to right,
                             rgb(0,20,120,0.8) 0%,
-                            rgb(0,20,120,0.8) 50%,
-                            rgb(0,0,40,0.8) 50%,
+                            rgb(0,20,120,0.8) 0%,
+                            rgb(0,0,40,0.8) 0%,
                             rgb(0,0,40,0.8) 100%
                         );
                 ">
-                    <span class="option-title font-override">1x</span>
+                    <span class="option-title font-override-black">1x</span>
                 </div>
             </div>
             <div class="option" id="a7">
@@ -143,24 +143,30 @@
             <div class="option" id="a8">
                 <span class="title">Color Blind Strength</span>
                 <div class="option-picker">
-                    <span class="option-title font-override">5</span>
+                    <span class="option-title font-override-black">5</span>
+                </div>
+            </div>
+            <div class="option" id="a9">
+                <span class="title">User Interface Parallax</span>
+                <div class="option-picker">
+                    <span class="option-title">On</span>
                 </div>
             </div>
             <span class="header" id="2a">Graphics Quality</span>
-            <div class="option" id="a9">
+            <div class="option" id="a10">
                 <span class="title">Anti-Aliasing</span>
                 <div class="option-picker">
                     <span class="option-title">Off</span>
                 </div>
             </div>
-            <div class="option option-disabled" id="a10">
+            <div class="option option-disabled" id="a11">
                 <span class="title">Temporal Super Resolution</span>
                 <div class="option-picker">
                     <span class="option-title">Off</span>
                 </div>
             </div>
-            <div class="option" id="a11">
-                <span class="title"><span class="font-override-lite">3</span>D Resolution</span>
+            <div class="option" id="a12">
+                <span class="title"><span class="font-override-medium">3</span>D Resolution</span>
                 <div class="option-slider" style="
                         background-image: linear-gradient(to right,
                             rgb(0,20,120,0.8) 0%,
@@ -169,73 +175,79 @@
                             rgb(0,0,40,0.8) 100%
                         );
                 ">
-                    <span class="option-title font-override">90%</span>
+                    <span class="option-title font-override-black">90%</span>
                 </div>
             </div>
-            <div class="option option-disabled" id="a12">
-                <span class="title">Dynamic <span class="font-override-lite">3</span>D Resolution</span>
+            <div class="option option-disabled" id="a13">
+                <span class="title">Dynamic <span class="font-override-medium">3</span>D Resolution</span>
                 <div class="option-picker">
                     <span class="option-title">Off</span>
                 </div>
             </div>
-            <div class="option option-disabled" id="a13">
+            <div class="option option-disabled" id="a14">
                 <span class="title">Nanite Virtualized Geometry</span>
                 <div class="option-picker">
                     <span class="option-title">Off</span>
                 </div>
             </div>
-            <div class="option" id="a14">
+            <div class="option" id="a15">
                 <span class="title">Shadows</span>
                 <div class="option-picker">
                     <span class="option-title">Off</span>
                 </div>
             </div>
-            <div class="option option-disabled" id="a15">
+            <div class="option option-disabled" id="a16">
                 <span class="title">Global Illumination</span>
                 <div class="option-picker">
                     <span class="option-title">Off</span>
                 </div>
             </div>
-            <div class="option option-disabled" id="a16">
+            <div class="option option-disabled" id="a17">
                 <span class="title">Reflections</span>
                 <div class="option-picker">
                     <span class="option-title">Off</span>
                 </div>
             </div>
-            <div class="option" id="a17">
+            <div class="option" id="a18">
                 <span class="title">View Distance</span>
                 <div class="option-picker">
                     <span class="option-title">Low</span>
                 </div>
             </div>
-            <div class="option" id="a18">
+            <div class="option" id="a19">
                 <span class="title">Textures</span>
                 <div class="option-picker">
                     <span class="option-title">Low</span>
                 </div>
             </div>
-            <div class="option" id="a19">
+            <div class="option option-disabled" id="a20">
                 <span class="title">Effects</span>
                 <div class="option-picker">
                     <span class="option-title">Low</span>
                 </div>
             </div>
-            <div class="option" id="a20">
+            <div class="option option-disabled" id="a21">
                 <span class="title">Post Processing</span>
                 <div class="option-picker">
                     <span class="option-title">Low</span>
                 </div>
             </div>
-            <div class="option" id="a21">
+            <div class="option option-disabled" id="a22">
                 <span class="title">Ray Tracing</span>
                 <div class="option-picker">
                     <span class="option-title">Off</span>
                 </div>
             </div>
+            <div class="option" id="a23">
+                <span class="title">Meshes</span>
+                <div class="option-picker">
+                    <span class="option-title">Low</span>
+                </div>
+            </div>
         </div>
         <div class="descriptionParent" id="a0" type="desktop">
             <span class="title">Window Mode</span>
-            <span class="description">How the game is displayed on your screen. <b>Windowed</b>: Runs the game in a window that you can resize. <b>Windowed Fullscreen</b>: Runs the game in fullscreen but allows minimzation and easy alt-tabbing. <b>Fullscreen</b>: Runs the game in fullscreen with the best input delay.</span>
+            <span class="description">In <b>Windowed</b> mode you can interact with other windows more easily, and drag the edges of the window to set the size. In <b>Windowed Fullscreen</b> mode you can easily switch between applications. In <b>Fullscreen</b> mode you cannot interact with other windows as easily, but the game will run slightly faster</span>
             <span class="description warning" hidden>Lorem epsum</span>
             <div class="options">
                 <span class="option first">Windowed</span>
@@ -245,17 +257,17 @@
         </div>
         <div class="descriptionParent inactive-object" id="a1" type="desktop">
             <span class="title">Resolution</span>
-            <span class="description">The render resolution of your game, lower values will perform better, but may appear blurry.</span>
+            <span class="description">In <b>Windowed</b> mode, this determines the size of the window. In <b>Fullscreen</b> mode, this determines the graphic card's output resoltuion, which can result in black bars or stretching, depending on the monitor and graphics card. Display Resolution is inactive in <b>Windowed Fullscreen</b> mode.</span>
             <span class="description warning" hidden>Lorem epsum</span>
             <div class="options">
-                <span class="option first font-override">1280x720</span>
-                <span class="option font-override">1600x900</span>
-                <span class="option font-override active">1920x1080</span>
+                <span class="option first font-override-black">1280x720</span>
+                <span class="option font-override-black">1600x900</span>
+                <span class="option font-override-black active">1920x1080</span>
             </div>
         </div>
         <div class="descriptionParent inactive-object" id="a2" type="desktop">
-            <span class="title">VSync</span>
-            <span class="description">Prevents screen tearing by syncing your FPS with your monitor's refresh rate. May result in higher input delay.</span>
+            <span class="title">Vsync</span>
+            <span class="description">Enabling Vsync eliminates screen tearing by always rendering and presenting a full frame. Disabling Vsync can give higher frame rates and better input response time, but may result in horizontal screen tearing. This feature only works in <b>Fullscreen</b> mode.</span>
             <span class="description warning" hidden>Lorem epsum</span>
             <div class="options">
                 <span class="option first active">Off</span>
@@ -264,14 +276,84 @@
         </div>
         <div class="descriptionParent inactive-object" id="a3" type="desktop">
             <span class="title">Frame Rate Limit</span>
-            <span class="description">Prevents screen tearing by syncing your FPS with your monitor's refresh rate. May result in higher input delay.</span>
+            <span class="description">Frame rate limits set the highest frame rate that is allowed. Set this lower for a more conistent frame rate or higher for the best experience on fast machines. You may need to disable Vsync to reach higher frame rates.</span>
             <span class="description warning" hidden>Lorem epsum</span>
+            <div class="options long-list">
+                <span class="option first font-override-black">30</span>
+                <span class="option font-override-black">60</span>
+                <span class="option font-override-black">120</span>
+                <span class="option font-override-black">144</span>
+                <span class="option font-override-black">160</span>
+                <span class="option font-override-black">165</span>
+                <span class="option font-override-black">180</span>
+                <span class="option font-override-black">200</span>
+                <span class="option active font-override-black">240</span>
+                <span class="option font-override-black">360</span>
+                <span class="option">Unlimited</span>
+            </div>
+        </div>
+        <div class="descriptionParent inactive-object" id="a4" type="desktop">
+            <span class="title">Rendering Mode</span>
+            <span class="description">Selects which low-llevel rendering mode to use.<br><b>DirectX <span class="font-override-bold">11</span></b> is the older graphics API.<br><b>Performance</b> is a mode that offers significant performance gains by disabling most rendering features to reduce memory usage and lighten the load on CPU and GPU.<br><b>DirectX <span class="font-override-black">12</span></b> is a new graphics API and may offer performance increases over DirectX <span class="font-override-black">11</span>. It is required to enable Nanite (which dynamically and efficiently scales meshes in the envioronment) and Lumen (which uses multiple ray-tracing methods to solve global illumination and reflections).</span>
+            <span class="description warning">Some options from DirectX <span class="font-override-medium">11</span> do not appear in performance mode, but apply anyways.</span>
             <div class="options">
-                <span class="option first active">Off</span>
-                <span class="option">On</span>
+                <span class="option">DirectX &nbsp;<span class="font-override-medium">11</span></span>
+                <span class="option active">Performance</span>
+                <span class="option">DirectX &nbsp;<span class="font-override-medium">12</span></span>
+            </div>
+        </div>
+        <div class="descriptionParent inactive-object" id="a5" type="desktop">
+            <span class="title">Brightness</span>
+            <span class="description">Adjusts the screen's brightness.</span>
+            <span class="description warning" hidden>Lorem epsum</span>
+            <div class="options" hidden>
+                <span class="option first">Windowed</span>
+                <span class="option">Windowed Fullscreen</span>
+                <span class="option active">Fullscreen</span>
+            </div>
+        </div>
+        <div class="descriptionParent inactive-object" id="a6" type="desktop">
+            <span class="title">Brightness</span>
+            <span class="description">Adjusts the contrast of the user interface.</span>
+            <span class="description warning">The in-game version of this option provides an image to see your adjustments.</span>
+            <div class="options" hidden>
+                <span class="option first">Windowed</span>
+                <span class="option">Windowed Fullscreen</span>
+                <span class="option active">Fullscreen</span>
+            </div>
+        </div>
+        <div class="descriptionParent inactive-object" id="a7" type="desktop">
+            <span class="title">Color Blind Mode</span>
+            <span class="description">Adjusts the game's color that works best for color blindness.</span>
+            <span class="description warning">The in-game version of this option provides an image to see your adjustments.</span>
+            <div class="options">
+                <span class="option first">Off</span>
+                <span class="option">Deuteranope</span>
+                <span class="option active">Protanope</span>
+                <span class="option">Tritanope</span>
+            </div>
+        </div>
+        <div class="descriptionParent inactive-object" id="a8" type="desktop">
+            <span class="title">Color Blind Strength</span>
+            <span class="description">Adjusts the strength of applied color blind mode.</span>
+            <span class="description warning">The in-game version of this option provides an image to see your adjustments.</span>
+            <div class="options" hidden>
+                <span class="option first">Windowed</span>
+                <span class="option">Windowed Fullscreen</span>
+                <span class="option active">Fullscreen</span>
+            </div>
+        </div>
+        <div class="descriptionParent inactive-object" id="a9" type="desktop">
+            <span class="title">User Interface Parallax</span>
+            <span class="description">Some menus, like the Item Shop, may have parallax effects. Disable this setting for those effects to remain static.</span>
+            <span class="description warning" hidden>The in-game version of this option provides an image to see your adjustments.</span>
+            <div class="options" hidden>
+                <span class="option first">Off</span>
+                <span class="option active">On</span>
             </div>
         </div>
     </div>
+</div>
 
     <div id="footer" type="desktop" hidden>Heading Now © ZetaFonts<br>Not Endorsed, Sponsored or Affiliated With Epic Games, Inc / Fortnite</div>
     <div id="footer" type="mobile" hidden>NOT OPTIMIZED FOR MOBILE!<br>Heading Now © ZetaFonts<br>Not Endorsed, Sponsored or Affiliated With Epic Games, Inc / Fortnite</div>
