--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <div class="option" id="a1">
                 <span class="title">Resolution</span>
                 <div class="option-picker">
-                    <span class="option-title font-override-black" >1920x1080</span>
+                    <span class="option-title" >1920x1080</span>
                 </div>
             </div>
             <div class="option" id="a2">
@@ -98,7 +98,7 @@
             <div class="option" id="a3">
                 <span class="title">Frame Rate Limit</span>
                 <div class="option-picker">
-                    <span class="option-title font-override-black">240</span>
+                    <span class="option-title">240</span>
                 </div>
             </div>
             <div class="option" id="a4">
@@ -118,7 +118,7 @@
                             rgb(0,0,40,0.8) 100%
                         );
                 ">
-                    <span class="option-title font-override-black">100%</span>
+                    <span class="option-title">100%</span>
                 </div>
             </div>
             <div class="option" id="a6">
@@ -131,7 +131,7 @@
                             rgb(0,0,40,0.8) 100%
                         );
                 ">
-                    <span class="option-title font-override-black">1x</span>
+                    <span class="option-title">1x</span>
                 </div>
             </div>
             <div class="option" id="a7">
@@ -143,7 +143,7 @@
             <div class="option" id="a8">
                 <span class="title">Color Blind Strength</span>
                 <div class="option-picker">
-                    <span class="option-title font-override-black">5</span>
+                    <span class="option-title">5</span>
                 </div>
             </div>
             <div class="option" id="a9">
@@ -166,7 +166,7 @@
                 </div>
             </div>
             <div class="option" id="a12">
-                <span class="title"><span class="font-override-medium">3</span>D Resolution</span>
+                <span class="title">3D Resolution</span>
                 <div class="option-slider" style="
                         background-image: linear-gradient(to right,
                             rgb(0,20,120,0.8) 0%,
@@ -175,11 +175,11 @@
                             rgb(0,0,40,0.8) 100%
                         );
                 ">
-                    <span class="option-title font-override-black">90%</span>
+                    <span class="option-title">90%</span>
                 </div>
             </div>
             <div class="option option-disabled" id="a13">
-                <span class="title">Dynamic <span class="font-override-medium">3</span>D Resolution</span>
+                <span class="title">Dynamic 3D Resolution</span>
                 <div class="option-picker">
                     <span class="option-title">Off</span>
                 </div>
@@ -260,9 +260,9 @@
             <span class="description">In <b>Windowed</b> mode, this determines the size of the window. In <b>Fullscreen</b> mode, this determines the graphic card's output resoltuion, which can result in black bars or stretching, depending on the monitor and graphics card. Display Resolution is inactive in <b>Windowed Fullscreen</b> mode.</span>
             <span class="description warning" hidden>Lorem epsum</span>
             <div class="options">
-                <span class="option first font-override-black">1280x720</span>
-                <span class="option font-override-black">1600x900</span>
-                <span class="option font-override-black active">1920x1080</span>
+                <span class="option first">1280x720</span>
+                <span class="option">1600x900</span>
+                <span class="option active">1920x1080</span>
             </div>
         </div>
         <div class="descriptionParent inactive-object" id="a2" type="desktop">
@@ -279,27 +279,27 @@
             <span class="description">Frame rate limits set the highest frame rate that is allowed. Set this lower for a more conistent frame rate or higher for the best experience on fast machines. You may need to disable Vsync to reach higher frame rates.</span>
             <span class="description warning" hidden>Lorem epsum</span>
             <div class="options long-list">
-                <span class="option first font-override-black">30</span>
-                <span class="option font-override-black">60</span>
-                <span class="option font-override-black">120</span>
-                <span class="option font-override-black">144</span>
-                <span class="option font-override-black">160</span>
-                <span class="option font-override-black">165</span>
-                <span class="option font-override-black">180</span>
-                <span class="option font-override-black">200</span>
-                <span class="option active font-override-black">240</span>
-                <span class="option font-override-black">360</span>
+                <span class="option first">30</span>
+                <span class="option">60</span>
+                <span class="option">120</span>
+                <span class="option">144</span>
+                <span class="option">160</span>
+                <span class="option">165</span>
+                <span class="option">180</span>
+                <span class="option">200</span>
+                <span class="option active">240</span>
+                <span class="option">360</span>
                 <span class="option">Unlimited</span>
             </div>
         </div>
         <div class="descriptionParent inactive-object" id="a4" type="desktop">
             <span class="title">Rendering Mode</span>
-            <span class="description">Selects which low-llevel rendering mode to use.<br><b>DirectX <span class="font-override-bold">11</span></b> is the older graphics API.<br><b>Performance</b> is a mode that offers significant performance gains by disabling most rendering features to reduce memory usage and lighten the load on CPU and GPU.<br><b>DirectX <span class="font-override-black">12</span></b> is a new graphics API and may offer performance increases over DirectX <span class="font-override-black">11</span>. It is required to enable Nanite (which dynamically and efficiently scales meshes in the envioronment) and Lumen (which uses multiple ray-tracing methods to solve global illumination and reflections).</span>
-            <span class="description warning">Some options from DirectX <span class="font-override-medium">11</span> do not appear in performance mode, but apply anyways.</span>
+            <span class="description">Selects which low-llevel rendering mode to use.<br><b>DirectX 11</b> is the older graphics API.<br><b>Performance</b> is a mode that offers significant performance gains by disabling most rendering features to reduce memory usage and lighten the load on CPU and GPU.<br><b>DirectX 12</b> is a new graphics API and may offer performance increases over DirectX 11. It is required to enable Nanite (which dynamically and efficiently scales meshes in the envioronment) and Lumen (which uses multiple ray-tracing methods to solve global illumination and reflections).</span>
+            <span class="description warning">Some options from DirectX 11 do not appear in performance mode, but apply anyways.</span>
             <div class="options">
-                <span class="option">DirectX &nbsp;<span class="font-override-medium">11</span></span>
+                <span class="option">DirectX &nbsp;11</span>
                 <span class="option active">Performance</span>
-                <span class="option">DirectX &nbsp;<span class="font-override-medium">12</span></span>
+                <span class="option">DirectX &nbsp;12</span>
             </div>
         </div>
         <div class="descriptionParent inactive-object" id="a5" type="desktop">
