--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!--
+    TODO: Make a script to auto generate the settings page 
+-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
